# Commerce

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  add_all_perms.txt  add_click2.txt  add_click_output.txt  agree_click.txt  btn_detail.txt  buttons_output.txt  dropdown_options.txt  html_around_btn.txt  modal_check.txt  oauth_reauth.txt  pyproject.toml  radio_check.txt  radios.txt  row_html.txt  run-web.bat  set_all_write.txt  tables_output.txt
.serena/: project.yml
docs/: api-cafe24-analytics.md  api-coupang.md  api-smartstore.md  dashboard-data-contract.md
fixtures/cafe24_analytics/sample/: sales.json  visitors.json
fixtures/coupang/sample/: orders.json
fixtures/naver/sample/: entities.json  metrics_daily.csv  metrics_intraday.csv
fixtures/smartstore/sample/: orders.json
imports/: naver_campaign.csv
scripts/: google_oauth.py  test_live_set_bid.py
src/commerce/: cli.py  config.py  db.py  executor.py  fixtures.py  registry.py  repo.py  util.py  worker.py
src/commerce/connectors/: __init__.py  base.py  cafe24_analytics.py  coupang.py  demo.py  google_ads.py  meta_ads.py  naver_searchad.py  smartstore.py  tiktok_ads.py
src/commerce/importers/: cafe24_orders.py  google_export.py  meta_export.py  naver_searchad.py  standard.py
src/commerce/notify/: telegram_bot.py
tests/: conftest.py  test_google_ads_apply_action.py  test_import_cafe24_orders.py  test_import_meta_google.py  test_import_naver.py  test_import_standard_daily.py  test_smartstore_connector.py  test_smoke.py  test_web_connector_config.py
(+14 files in other folders)
