[project]
name = "commerce"
version = "0.2.0"
description = "Commerce: multi-channel sales + ads operating system with pluggable connectors, Telegram approvals, mini web app, and SQLite"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.0.0",
  "fastapi>=0.115.0",
  "google-ads>=29.1.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "tzdata>=2024.1",
  "uvicorn[standard]>=0.30.6",
]

[project.scripts]
commerce = "commerce.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commerce"]
